--- a/test.html
+++ b/test.html
@@ -1,34 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <script src="js/bootstrap.min.js" type="text/javascript"></script>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
 </head>
 <body>
-<div class="panel panel-default">
-    <div class="panel-heading" role="tab">
-        <h4 class="panel-title">
-            <div class="note_mark" style="display: none">
-                <p class="mark_time">55</p>
-                <p class="mark_courseid">11</p>
-                <p class="mark_userid">2</p>
-            </div>
-            <a href="javascript:void(0)"><span class="glyphicon glyphicon-play" aria-hidden="true">00:55</span></a>
-            <span>&nbsp;&nbsp;</span>
-            <a class="collapsed" role="button" data-toggle="collapse" href="#collapse" aria-expanded="false">
-                论持久战
-            </a>
-            <a href="javascript:void(0)" style="color: red;float: right">删除</a>
-        </h4>
-    </div>
-    <div id="collapse" class="panel-collapse collapse" role="tabpanel">
-        <div class="panel-body">
-            从农村包围城市从农村包围城市从农村包围城市从农村包围城市从农村包围城市从农村包围城市从农村包围城市从农村包围城市从农村包围城市
-        </div>
-    </div>
-</div>
+<video controls>
+    <source src="http://movietrailers.apple.com/movies/disney/a-wrinkle-in-time/a-wrinkle-in-time-trailer-1_h640w.mov" type="video/mp4"/>
+</video>
+<video controls>
+    <source src="http://localhost:63342/mooc_system/test/a-wrinkle-in-time-trailer-1_h640w.mov" type="video/mp4"/>
+</video>
 </body>
 </html>
